--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-md-6 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid">
+                <div class="col-12 col-md-3 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid"> 
+                </div>
+                <div class="col-12 col-md-3 col-sm align-self-center">
+                    <a href="#reserve" role="button" class="btn btn-sm bg-warning text-dark btn-block">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -67,12 +70,18 @@
 
 
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
+            <div class="col-12 col-sm-4 order-sm-first col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm order-sm-first col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="col col-sm order-sm-last col-md">
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person</p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/buffet.png " alt="buffet">
+                </div>
             </div>
         </div>
 
@@ -95,6 +104,62 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row row-content align-items-center justify-cntent-center">
+            <form class="offset-md-2" id="reserve">
+                <div class="card">
+                    <h3 class="card-header badge-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <div class="form-group row">
+                                            <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+                                            <div class="col-md-10">
+                                                <input type="radio" id="1" name="guests" value="1">
+                                                <label for="1">1  </label>
+                                                <input type="radio" id="2" name="guests" value="2">
+                                                <label for="2">2  </label>
+                                                <input type="radio" id="3" name="guests" value="3">
+                                                <label for="3">3  </label>
+                                                <input type="radio" id="4" name="guests" value="4">
+                                                <label for="4">4  </label>
+                                                <input type="radio" id="5" name="guests" value="5">
+                                                <label for="5">5  </label>
+                                                <input type="radio" id="6" name="guests" value="6">
+                                                <label for="6">6</label>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="form-group row">
+                                            <label for="data-time" class="col-md-2 col-form-label">Data and Time</label>
+                                            <div class="col-md-4">
+                                                <input type="text" class="form-control" id="data" name="data" placeholder="Data">
+                                            </div>
+                                            <div class="col-md-4">
+                                                <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="form-group row">
+                                            <div class="col-md-10 offset-md-2">
+                                                <a href="#" class="btn btn-primary">Reserve</a>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </form> 
         </div>
     </div>
 
