--- a/aboutus.html
+++ b/aboutus.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="css/styles.css" rel="stylesheet">
+    <script src="js/scripts.js"></script>
 <head>
 
     <title>Ristorante Con Fusion: About Us</title>
